--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-
-
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body>
-    
-<h1> hello its dod branch </h1>
-    <script src="app.js"> </script>   
+  <div id="container">
+<h1> LA ROCHE POSAY EFFACLAR SALICYLIC ACID ACNE TREATMENT SERUM </h1>
+<img src="https://www.laroche-posay.us/dw/image/v2/AANG_PRD/on/demandware.static/-/Sites-acd-laroche-posay-master-catalog/default/dw68872797/product/March%202023%20packshot%20updates/Effaclar_Serum.jpg?sw=698&sh=698&sm=cut&sfrm=jpg&q=70" width="500" height="400" /> 
+  <p>
+    This lightweight salicylic acid acne treatment serum clears acne blemishes and helps prevent new breakouts, while also visibly reducing pores, fine lines, and post-acne marks.
+    This serum includes Triple Acid Complex, a blend of 1.5% salicylic acid, glycolic acid, and micro-exfoliating lipo-hydroxy acid for optimal efficacy. This formula also includes Niacinamide and La Roche-Posay Thermal Water to help soothe skin and minimize skin irritation.
+  </p>
+<hr>
+  <h2> INGREDIENTS </h2>
+  <ul>
+    <li> Salicylic Acid: Known for its effective exfoliating properties to help clear and refine the appearance of pores. An ideal choice for those concerned with clogged pores and oily skin  </li>
+    <li>Glycolic Acid: An Alpha-Hydroxy Acid (AHA) often considered the gold standard in dermatology for skin exfoliation. Within our formulas, it is recognized for its ability to increase skin surface cell turnover and help visibly improve skin tone and texture.   </li>  
+    <li> Lipo-Hydroxy Acid: Also known as LHA, it's a derivative of salicylic acid, and has exfoliating and skin surface renewing properties. </li>
+    <li>  Niacinamide: A form of vitamin B3, niacinamide is a water soluble vitamin. It is widely used in dermatology and is known for its ability to help visibly fade skin discoloration.</li>
+    <li> La Roche-Posay Thermal Water: A thermal water that helps soothe   
+  </ul>
+  <hr>
+  <p> You can buy it now through the official  <a href="https://www.laroche-posay.us/our-products/face/acne-products/effaclar-salicylic-acid-acne-treatment-serum-3337875722827.html#tab=ingredients"> La Roche Posay website  </a> </p>
 </body>
+
 </html>
